[package]
name = "wasm-svg"
version = "0.1.0"
authors = ["Tobias Mucke <tobias.mucke@gmail.com"]
license = ""
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/tokcum/wasm-svg"
homepage = ""
documentation = ""
description = """
My super awesome Rust & WebAssembly project addressing SVG!
"""
edition = "2018"

[lib]
path = "lib"

[[bin]]
path = "ws"
name = "ws"

[workspace]
members = [
    "examples/simple",
    "lib",
    "ws",
]
