[package]
name = "wasm-svg-lib"
description = "My super awesome Rust & WebAssembly project addressing SVG!"
version = "0.1.0"
authors = ["Tobias Mucke <tobias.mucke@gmail.com"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"

#[dependencies.web-sys]
#version = "^0.3"
#features = [
#  'Document',
#  'Element',
#  'Window'
#]
