[package]
name = "wasm-svg-lib"
version = "0.1.0"
authors = ["Tobias Mucke <tobias.mucke@gmail.com"]
license = ""
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/tokcum/wasm-svg"
homepage = ""
documentation = ""
description = """
Wrapper for web-sys inspired by D3My super awesome Rust & WebAssembly project addressing SVG!
"""
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "^0.2"

[dependencies.web-sys]
version = "^0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'SvgElement',
  'Window',
]
