[package]
name = "wasm-svg-lib"
version = "0.1.0"
authors = ["Tobias Mucke <tobias.mucke@gmail.com"]
license = ""
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/tokcum/wasm-svg"
homepage = ""
documentation = ""
description = """
Wrapper for web-sys inspired by D3My super awesome Rust & WebAssembly project addressing SVG!
"""
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "^0.2"

# 2020-03-17 feature wasm-bindgen has to be enabled otherwise wasm execution will panick
rand = { version = "^0.6", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "^0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'NodeList',
  'SvgCircleElement',
  'SvgPolylineElement',
  'SvgElement',
  'SvggElement',
  'SvgsvgElement',
  'Window',
]
