[package]
name = "wasm-svg-ws"
version = "0.1.0"
authors = ["Tobias Mucke <tobias.mucke@gmail.com"]
license = ""
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/tokcum/wasm-svg"
homepage = ""
documentation = ""
description = """
My super awesome Rust & WebAssembly project addressing SVG!
"""
edition = "2018"

[dependencies]
actix-web = "~2"
actix-rt = "~1"
actix-files = "^0.2"
