[package]
name = "wasm-svg-examples-perfchart"
version = "0.1.0"
authors = ["Tobias Mucke <tobias.mucke@gmail.com"]
license = ""
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/tokcum/wasm-svg"
homepage = ""
documentation = ""
description = """
Circle example to demonstrate the power of wasm-svg-lib.
"""
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
wasm-svg-lib = { path = "../../lib" }

[dependencies.web-sys]
version = "^0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'SvgCircleElement',
  'SvgElement',
  'Window',
]

